# filter

./: CMakeLists.txt  READMe.md  main.cpp
cuda-support/: README.md
cuda-support/include/: filter.cuh  filter.h
cuda-support/matlab/: sobelFilter.m
cuda-support/src/: filter.cu
eigen/share/pkgconfig/: eigen3.pc
mylibrary/src/: filter.cu
testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
